--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Practice Site 3</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta charset="utf-8" >
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
+		<link rel="stylesheet" href="assets/css/main.css" >
 	</head>
 	<body class="is-preload">
 
